--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "analytics": "0.0.8",
-    "analytics-plugin-ga": "0.0.11",
+    "analytics": "0.0.9",
+    "analytics-plugin-ga": "0.0.12",
     "analytics-utils": "0.0.6",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "redux-logdown": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
