--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "analytics": "0.0.9",
-    "analytics-plugin-ga": "0.0.12",
-    "analytics-utils": "0.0.6",
+    "analytics": "0.0.10",
+    "analytics-plugin-ga": "0.0.13",
+    "analytics-utils": "0.0.8",
+    "debug": "^4.1.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.0.5",
