--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "analytics": "0.0.10",
-    "analytics-plugin-ga": "0.0.13",
-    "analytics-utils": "0.0.8",
+    "analytics": "0.0.11",
+    "analytics-plugin-ga": "0.0.14",
+    "analytics-plugin-segment": "0.0.2",
+    "analytics-utils": "0.0.10",
     "debug": "^4.1.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
